--- a/quiz-app/end.html
+++ b/quiz-app/end.html
@@ -30,8 +30,8 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/game.html">Play Again</a>
-        <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="game.html">Play Again</a>
+        <a class="btn" href="https://aageboi.github.io/quiz-app/">Go Home</a>
       </div>
     </div>
     <script src="end.js"></script>
