--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
 <body id="home">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Heri Gunawan</a>
+      <a class="navbar-brand" href="#home">Heri Gunawan</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
@@ -45,8 +42,7 @@
 
   <section class="jumbotron text-center text-light">
     <img src="img/heri-gunawan.png" alt="Heri Gunawan" width="200" class="rounded-circle img-thumbnail" />
-    <h1 class="display-4">Heri Gunawan</h1>
-    <p class="lead">Web Developer</p>
+    <h1 class="display-4">Hi, I'm Heri. Nice to meet you.</h1>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#FFFFFF" fill-opacity="1"
         d="M0,288L15,250.7C30,213,60,139,90,101.3C120,64,150,64,180,106.7C210,149,240,235,270,266.7C300,299,330,277,360,240C390,203,420,149,450,138.7C480,128,510,160,540,176C570,192,600,192,630,170.7C660,149,690,107,720,90.7C750,75,780,85,810,117.3C840,149,870,203,900,240C930,277,960,299,990,272C1020,245,1050,171,1080,128C1110,85,1140,75,1170,90.7C1200,107,1230,149,1260,160C1290,171,1320,149,1350,128C1380,107,1410,85,1425,74.7L1440,64L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z">
@@ -63,13 +59,10 @@
       </div>
       <div class="row justify-content-center mb-5">
         <div class="col-md-4">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet neque reiciendis optio molestias, maxime
-          asperiores itaque error praesentium, quaerat, at fugit sed non ut odit amet suscipit. Earum, quisquam
-          explicabo.
+          I'm a fullstack web developer living in Depok, Indonesia with over 10+ years of experiences in wide range of programming language.
         </div>
         <div class="col-md-4">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit laborum earum animi debitis? Sed
-          facilis quia cum dignissimos eos, quod ipsam saepe voluptatibus aperiam ab sequi laborum fugiat maxime atque.
+          I loved photography, gaming and creating a web apps.
         </div>
       </div>
     </div>
@@ -149,9 +142,9 @@
 
   <section id="contact">
     <div class="container">
-      <div class="row text-center">
-        <div class="col">
-          <h2>Contact Me</h2>
+      <div class="row justify-content-center text-center mb-3">
+        <div class="col-md-8">
+          <h2>Thanks for taking the time to reach out. How can I help you today?</h2>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -164,24 +157,26 @@
             <strong>Oops!</strong> Something went wrong.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
-          <form name="contact">
-            <div class="mb-3">
+          <form class="row g-3 mb-3" name="contact">
+            <div class="col-md-6">
               <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name">
+              <input type="text" class="form-control" id="name" name="name" required>
             </div>
-            <div class="mb-3">
+            <div class="col-md-6">
               <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email">
+              <input type="email" class="form-control" id="email" name="email" required>
             </div>
-            <div class="mb-3">
+            <div class="col-md-12">
               <label for="msg" class="form-label">Message</label>
-              <textarea name="message" id="" cols="30" rows="10" class="form-control"></textarea>
+              <textarea name="message" id="" cols="30" rows="10" class="form-control" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
-            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-              Loading...
-            </button>
+            <div class="col-md-12">
+              <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+            </div>
           </form>
         </div>
       </div>
@@ -193,8 +188,8 @@
   </section>
 
   <footer class="text-center text-white pb-5">
-    <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/aageboi/"
-        class="text-white fw-bold">Heri Gunawan</a></p>
+    <p>Made by <a href="https://www.instagram.com/aageboi/" class="text-white fw-bold">Heri Gunawan</a> with <i
+        class="bi bi-heart-fill text-danger"></i></p>
   </footer>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -202,7 +197,7 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzrI7JbVN9gxMvYUU5UAt2fuFboPYl75EUyMu4xvCbOVmGQJ_MeQsnt0JXftFTd0NizEw/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxiU87lYBDYiPk2dh7SBCpBaBvmK7tFF8AcqdLJFS-3jmBuDIYzNFbiH9dmV157IOO4sQ/exec'
     const form = document.forms['contact']
     const btnKirim = document.querySelector('.btn-kirim');
     const btnLoading = document.querySelector('.btn-loading');
