--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio | Heri Gunawan</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,8 +13,15 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-37XK24V10L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  <title>Portfolio | Heri Gunawan</title>
+    gtag('config', 'G-37XK24V10L');
+  </script>
 </head>
 
 <body id="home">
@@ -59,7 +67,8 @@
       </div>
       <div class="row justify-content-center mb-5">
         <div class="col-md-4">
-          I'm a fullstack web developer living in Depok, Indonesia with over 10+ years of experiences in wide range of programming language.
+          I'm a fullstack web developer living in Depok, Indonesia with over 10+ years of experiences in wide range of
+          programming language.
         </div>
         <div class="col-md-4">
           I loved photography, gaming and creating a web apps.
@@ -83,32 +92,35 @@
       <div class="row justify-content-center">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="img/p1.jpg" class="card-img-top" alt="project 1" />
+            <img src="img/templates-resume.png" class="card-img-top" alt="templates" />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk of the card's content.
+                Some Website Templates using bootstrap.
               </p>
+              <a href="https://aageboi.github.io/templates/" class="card-link">...more</a>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="img/p2.jpg" class="card-img-top" alt="project 2" />
+            <img src="img/projects-kodekuy.png" class="card-img-top" alt="kodekuy" />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk of the card's content.
+                Programming language tutorial sites based on projects.
               </p>
+              <a href="https://kodekuy.web.app/" class="card-link">...more</a>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="img/p3.jpg" class="card-img-top" alt="project 3" />
+            <img src="img/projects-covid19.png" class="card-img-top" alt="covid19" />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk of the card's content.
+                Daily cases of COVID-19 in Indonesia, source from covid19.go.id
               </p>
             </div>
+            <a href="https://aageboi.github.io/covid19" class="card-link">...more</a>
           </div>
         </div>
         <div class="col-md-4 mb-3">
