add more link on projects

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 Collections of projects from contributors.
               </p>
             </div>
+            <a href="https://kodekuy.github.io/" class="card-link">...more</a>
           </div>
         </div>
         <div class="col-md-4 mb-3">
