feat: add new project quran terjemahan

--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="img/p5.jpg" class="card-img-top" alt="project 5" />
+            <img src="img/projects-quran-terjemahan.png" class="card-img-top" alt="quran terjemahan" />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up the bulk of the card's content.
+                Memahami isi Al Quran dengan membaca terjemahannya.
               </p>
             </div>
+            <a href="https://quran-terjemahan.vercel.app/" class="card-link">...more</a>
           </div>
         </div>
       </div>
